# laime

./: .envrc  .gitignore  Justfile  codecov.yml  flake.nix  pyproject.toml
.github/workflows/: nix-x86_64-linux.yaml
.yaak/: yaak.fl_VuU3WMqTq4.yaml  yaak.rq_Zbhs4hFmMu.yaml  yaak.wk_dBnSh3s6HQ.yaml
models/: mxbai-embed-large-v1.toml  not_embedding_model.toml  qwen3.toml  qwen3_embedding.toml
nix/: ci.nix  download_mxbai_embed_large_v1.py  pyproject-overrides.nix  tests.nix  utils.nix
src/laime/: __init__.py  models.py  settings.py  testclient.py  typeguards.py  typeguards_test.py
src/laime/api/openai_api/: __init__.py  embeddings.py  embeddings_test.py  text_generation.py  text_generation_test.py
src/laime/backends/: __init__.py  llama_cpp.py  llama_cpp_test.py  none.py  openai_proxy.py  openai_proxy_test.py  sentence_transformers.py
src/laime/backends/abc/: __init__.py
